--- a/front/package.json
+++ b/front/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "bootstrap": "^3.3.7",
+    "react": "^16.1.1",
+    "react-bootstrap": "^0.31.5",
+    "react-bootstrap-table": "^4.1.4",
+    "react-dom": "^16.1.1",
     "react-icons": "^2.2.7",
     "react-scripts": "1.0.16"
   },
