--- a/reactive-football/package.json
+++ b/reactive-football/package.json
@@ -28,11 +28,11 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bootstrap": "4.0.0-beta.2",
-    "chart.js": "2.7.0",
+    "chart.js": "^2.7.0",
     "font-awesome": "^4.7.0",
     "history": "4.7.2",
     "react": "^16.0.0",
-    "react-chartjs-2": "2.6.4",
+    "react-chartjs-2": "^2.6.4",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.2.1",
