--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/mrholek/CoreUI-React/issues"
+  },
+  "dependencies": {
+    "react-notifications": "^1.4.3",
+    "react-notify-toast": "^0.4.0"
   }
 }
